# joMME_mvapi

./: .gitignore  CMakeLists.txt
code/: CMakeLists.txt  joMME_mvapi.sln
code/api/: mvapi.h
code/cgame/: CMakeLists.txt  bg_demos.c  cg_demos.c  cg_demos.h  cg_demos_camera.c  cg_demos_capture.c  cg_demos_hud.c  cg_demos_math.c  cg_demos_math.h  cg_demos_move.c  cg_draw.c  cg_ents.c  cg_event.c  cg_local.h  cg_main.c  cg_players.c  cg_servercmds.c  cg_syscalls.asm  cg_syscalls.c  cg_syscalls_wrappers.c  cg_view.c  cg_weapons.c  cgame.bat  cgame.q3asm  cgame.vcxproj  tr_types.h
code/game/: bg_lib.c  bg_lib.h  g_local.h  g_main.c  q_math.c  q_shared.c  q_shared.h
code/qcommon/: qmalloc3.c
tools/: CMakeLists.txt
tools/asm/: CMakeLists.txt
tools/cpp/: CMakeLists.txt
tools/lcc/: CMakeLists.txt
tools/rcc/: CMakeLists.txt
